# Chataka

./: AUTHORS  INSTALL  LICENSE  README.md  configure.ac
src/: Makefile.am  broadcasttalk.c  broadcasttalk.h  gsmcodec.c  gsmcodec.h  interfaceip.c  interfaceip.h  maindata.c  maindata.h  testall.c  threadinaudio.c  threadinaudio.h  threadoutaudio.c  threadoutaudio.h  threadsocket.c  threadsocket.h  tools.c  tools.h  udpsocket.c  udpsocket.h  users.c  users.h
src/gsm/: Makefile.am
